--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -57,7 +57,7 @@ footer {
 .copyright {
     font-size: 12px;
     color: $grey;
-    padding: 20px 0;
+    padding: 20px 15px;
 }
 
 .mobilephone__desktop {
