--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -22,6 +22,9 @@
   z-index: 2;
   .homepage__logo--slogan {
     margin-top: 30%;
+    .homepage__logo--small {
+      display: none;
+    }
     .btn--cta {
       .btncta__btn {
         margin-top: 15px;
