--- a/sass/style.scss
+++ b/sass/style.scss
@@ -37,6 +37,7 @@
 //========================
 @import "components/buttons";
 @import "components/navbar";
+@import "components/actions";
 
 @import "components/webforms/forms-global";
 @import "components/webforms/contact-form";
