--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -60,6 +60,10 @@ footer {
     padding: 20px 15px;
 }
 
+.footer--small__slogan {
+  text-align: right;
+}
+
 .mobilephone__desktop {
    margin: 15px 0;
  }
