--- a/sass/layout/_maintenance.scss
+++ b/sass/layout/_maintenance.scss
@@ -3,7 +3,7 @@
 //================================
 
 .maintenance-page {
-  background: url("../images/runderen.jpg") no-repeat;
+  background: url("../images/runderen_kalfshuys.jpg") no-repeat;
   position: absolute;
   height: 100%;
   background-size: cover;
