--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -9,7 +9,7 @@
   background-color: #000000;
   position: relative;
   .sectionhomepage__bcg {
-    background: url("../images/runderen.jpg") no-repeat;
+    background: url("../images/runderen_kalfshuys_gras.jpg") no-repeat;
     position: absolute;
     height: 101%;
     background-size: cover;
@@ -88,7 +88,7 @@
   min-height: 100vh;
   background-color: $grey;
   .corebusiness__region {
-    height: 650px;
+    height: 750px;
     background-color: $darkgrey;
     header {
       position: absolute;
