--- a/sass/state/_mediaquery.scss
+++ b/sass/state/_mediaquery.scss
@@ -106,6 +106,15 @@
     }
   }
 
+  // contact pagina
+  .contactregion--form {
+    .btnmobile__btn {
+      margin-top: 20px;
+      padding: 8px;
+      font-size: 1.2em;
+    }
+  }
+
   // De bestellen pagina de vleeskalender verkleinen
   .view-id-vleeskalender {
     font-size: 12px;
