--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,13 +49,12 @@
 @import "components/uc/cart";
 @import "components/uc/producten-table";
 @import "components/uc/checkout";
+@import "components/uc/orders";
+
 
 //=======================
 // @@ ++ State
 //=======================
 @import "state/mediaquery";
 
-//=======================
-// @@ ++ Theme
-//=======================
 
