--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -88,7 +88,7 @@
   min-height: 100vh;
   background-color: $grey;
   .corebusiness__region {
-    height: 750px;
+    min-height: 750px;
     background-color: $darkgrey;
     header {
       position: absolute;
